Initial dist commit.

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 </head>
 <body id="top">
 
-	<nav class="[ border-box px2 py1 ] [ flex flex-center ] bg-white sitenav">
+	<nav class="[ border-box px2 py1 ] [ flex flex-center ] bg-white border-bottom sitenav">
 		<div class="sitenav-inner">
 			<a href="#top" class="inline-block sand-darker bold mr2">UG White Brand Guide</a>
 			<a class="btn cardinal" href="#logos">Logos</a>
@@ -221,7 +221,7 @@
 
 							<div class="col col-6 md-col-4 xl-col-3 mb2">
 								<div class="swatch bg-alt-1 mb3">&nbsp;</div>
-								<h4 class="mb1">&nbsp;</h4>
+								<h4 class="mb1">Dusk</h4>
 								<p class="xsmall">
 									RGB: 122 35 46<br />
 									CMYK: 0 71 62 52<br />
@@ -250,22 +250,22 @@
 							</div>
 
 							<div class="col col-6 md-col-4 xl-col-3 mb2">
-								<div class="swatch bg-alt-3 mb3">&nbsp;</div>
-								<h4 class="mb1">Full Moon</h4>
-								<p class="xsmall">
-									RGB: 0 43 73<br />
-									CMYK: 100 41 0 71<br />
-									Hex: 002B49
-								</p>
-							</div>
-
-							<div class="col col-6 md-col-4 xl-col-3 mb2">
 								<div class="swatch bg-alt-8 mb3">&nbsp;</div>
 								<h4 class="mb1">Bark</h4>
 								<p class="xsmall">
 									RGB: 81 54 40<br />
 									CMYK: 0 33 51 68<br />
 									Hex: 513628
+								</p>
+							</div>
+
+							<div class="col col-6 md-col-4 xl-col-3 mb2">
+								<div class="swatch bg-alt-3 mb3">&nbsp;</div>
+								<h4 class="mb1">Full Moon</h4>
+								<p class="xsmall">
+									RGB: 0 43 73<br />
+									CMYK: 100 41 0 71<br />
+									Hex: 002B49
 								</p>
 							</div>
 
