Updated swatch sizing

--- a/src/index.html
+++ b/src/index.html
@@ -141,7 +141,7 @@
 						<h3 class="h2 regular mb3">Primary Colors</h3>
 
 						<div class="clearfix">
-							<div class="col col-6 md-col-3">
+							<div class="col col-6 md-col-4 xl-col-3">
 								<div class="swatch bg-forest mb3">&nbsp;</div>
 								<h4 class="mb1">Forest</h4>
 								<p class="xsmall">
@@ -151,7 +151,7 @@
 								</p>
 							</div>
 
-							<div class="col col-6 md-col-3">
+							<div class="col col-6 md-col-4 xl-col-3">
 								<div class="swatch bg-cardinal mb3">&nbsp;</div>
 								<h4 class="mb1">Cardinal</h4>
 								<p class="xsmall">
@@ -161,7 +161,7 @@
 								</p>
 							</div>
 
-							<div class="col col-6 md-col-3">
+							<div class="col col-6 md-col-4 xl-col-3">
 								<div class="swatch bg-sand mb3">&nbsp;</div>
 								<h4 class="mb1">Sand</h4>
 								<p class="xsmall">
