Updated primary logos

--- a/src/index.html
+++ b/src/index.html
@@ -82,6 +82,67 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="clearfix mxn3">
+				<div class="md-col md-col-4 px3 py3 section-heading">
+					<p>Tri-color and duo-color versions of the logo are ready for placement on primary brand colors.</p>
+				</div>
+
+				<div class="md-col md-col-8 bg-white">
+
+					<div class="px3 py3 content">
+
+						<h3 class="h2 regular">Tri-color</h3>
+
+						<div class="clearfix mxn2 mb3">
+							<div class="xl-col xl-col-6 px2">
+								<h4 class="caps gray mb3">Forest</h4>
+								<figure class="thumb UGW-logo">
+									<img alt="" src="./img/UGW-logo-tri-forest.png" />
+								</figure>
+							</div>
+							<div class="xl-col xl-col-6 px2">
+								<h4 class="caps gray mb3">Cardinal</h4>
+								<figure class="thumb UGW-logo">
+									<img alt="" src="./img/UGW-logo-tri-cardinal.png" />
+								</figure>
+							</div>
+						</div>
+
+					</div>
+
+				</div>
+			</div>
+
+			<div class="clearfix mxn3">
+				<div class="md-col md-col-4 px3 py2 section-heading"></div>
+
+				<div class="md-col md-col-8 bg-white border-bottom">
+
+					<div class="px3 py3 content">
+
+						<h3 class="h2 regular">Duo-color</h3>
+
+						<div class="clearfix mxn2 mb3">
+							<div class="xl-col xl-col-6 px2">
+								<h4 class="caps gray mb3">Forest</h4>
+								<figure class="thumb UGW-logo">
+									<img alt="" src="./img/UGW-logo-duo-forest.png" />
+								</figure>
+							</div>
+							<div class="xl-col xl-col-6 px2">
+								<h4 class="caps gray mb3">Cardinal</h4>
+								<figure class="thumb UGW-logo">
+									<img alt="" src="./img/UGW-logo-duo-cardinal.png" />
+								</figure>
+							</div>
+						</div>
+
+					</div>
+
+				</div>
+			</div>
+
 			<div class="clearfix mxn3">
 				<div class="md-col md-col-4 px3 py3 section-heading">
 					<p>UG White outposts have their own variation of the primary logo. Each outpost has it's own numeric identifier in the logo.</p>
